--- a/test/makefile
+++ b/test/makefile
@@ -1,10 +1,9 @@
 all:conv_main create_input
 
 conv_main:./../src/conv_main.c
-	gcc -Wall ./../src/conv_main.c ./../src/conv_seq.c ./../src/conv_multithread.c ./../src/utility.c -fopenmp -o conv
+	g++ ./../src/conv_main.c ./../src/conv_seq.c ./../src/conv_pthread.cpp ./../src/utility.c -pthread -o conv 
 
 create_input:./../src/create_input.c
-	gcc -Wall ./../src/create_input.c ./../src/utility.c -o create_input
+	g++ ./../src/create_input.c ./../src/utility.c -o create_input
 
-clean: 
 	rm *o conv create_input validate
